--- a/scss/sections/_facilities.scss
+++ b/scss/sections/_facilities.scss
@@ -12,4 +12,14 @@ img.facilities{
     padding: 0;
     height: auto;
     margin: 0;  
-}   
+}
+.facilities-img2 img{
+    width: auto;
+    padding: 0;
+    height: 100%;
+    margin: 0;
+    overflow-x: hidden;  
+}
+.facilities-img2{
+    overflow-x:hidden ;
+}      
